<resources>
    <string name="app_name">The App</string>
    <string name="welocome_to">Welcome To</string>
    <string name="video_meeting_the_app">Video Meeting | The App</string>
    <string name="sign_in_to_you_account">Sign in to you account</string>
    <string name="your_email_com">your@email.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordstr">• • • • • •</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_out">Sign Out</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="out_going_call">Calling</string>
</resources>