<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/black"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welocome_to"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_meeting_the_app"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textSignInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_you_account"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutHeader"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@+id/textSignInLabel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/email"
                    android:textSize="@dimen/_11sdp"
                    />

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:hint="@string/your_email_com"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_13sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/password"
                    android:textSize="@dimen/_11sdp"
                    />

                <EditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:hint="@string/passwordstr"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_13sdp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/sign_in"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@+id/cardSignIn"/>

        <ProgressBar
            android:id="@+id/signInProgressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSignIn"
            app:layout_constraintEnd_toEndOf="@+id/buttonSignIn"
            app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
            app:layout_constraintTop_toTopOf="@+id/buttonSignIn"
            />

        <TextView
            android:id="@+id/textNoAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/don_t_have_an_account"
            android:gravity="center"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"/>

        <TextView
            android:id="@+id/textSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/sign_up"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@+id/textNoAccount"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>